--- a/Lucky7/templates/view_listing.html
+++ b/Lucky7/templates/view_listing.html
@@ -19,6 +19,7 @@
                 <img src="{{ listing.image_url }}" referrerpolicy="no-referrer" alt="{{ listing.name }} Image" class="w-48 h-48 object-cover rounded-md mr-6">
                 <div>
                     <p><span class="font-semibold">Model:</span> {{ listing.model }}</p>
+                    <p><span class="font-semibold">Price:</span> {{ listing.price }}</p>
                     <p><span class="font-semibold">Color:</span> {{ listing.color }}</p>
                     <p><span class="font-semibold">Mileage:</span> {{ listing.mileage }} miles</p>
                     <p><span class="font-semibold">Steering Type:</span> {{ listing.steering_type }}</p>
