--- a/Lucky7/templates/car_listing_form.html
+++ b/Lucky7/templates/car_listing_form.html
@@ -21,6 +21,7 @@
         <label>Car Name: <input type="text" name="name" required></label><br>
         <label>Car Image: <input type="file" name="image" required></label><br>
         <label>Model: <input type="text" name="model" required></label><br>
+        <label>Price: <input type="number" name="price" required></label><br>
         <label>Color: <input type="text" name="color" required></label><br>
         <label>Mileage: <input type="number" name="mileage" required></label><br>
 
