--- a/Lucky7/templates/seller/reviews_section.html
+++ b/Lucky7/templates/seller/reviews_section.html
@@ -11,7 +11,7 @@
             value="all"
             id="all-reviews"
             class="text-white rounded-md px-2 py-1 hover:bg-blue-600
-            {% if filter_by == 'all' %} bg-gray-600 {% else %} bg-gray-400 {% endif %}"
+            {% if filter_by == 'all' %} bg-azure {% else %} bg-gray-400 {% endif %}"
           >
             All Reviews
           </button>
@@ -21,7 +21,7 @@
             value="buyer"
             id="buyer-reviews"
             class="text-white rounded-md px-2 py-1 hover:bg-blue-600
-            {% if filter_by == 'buyer' %} bg-gray-600 {% else %} bg-gray-400 {% endif %}"
+            {% if filter_by == 'buyer' %} bg-azure {% else %} bg-gray-400 {% endif %}"
           >
             Buyer Reviews
           </button>
@@ -31,7 +31,7 @@
             value="seller"
             id="seller-reviews"
             class="text-white rounded-md px-2 py-1 hover:bg-blue-600
-            {% if filter_by == 'seller' %} bg-gray-600 {% else %} bg-gray-400 {% endif %}"
+            {% if filter_by == 'seller' %} bg-azure {% else %} bg-gray-400 {% endif %}"
           >
             Seller Reviews
           </button>
