--- a/Lucky7/templates/usedCarAgent/agent_home.html
+++ b/Lucky7/templates/usedCarAgent/agent_home.html
@@ -119,7 +119,7 @@
       <button class="relative">
         <button
           type="button"
-          class="right-4 bottom-4 z-30 fixed flex justify-between bg-azure rounded-full px-6 py-5 mb-5 items-center gap-2 bg-slate-400"
+          class="right-4 bottom-4 z-30 fixed flex justify-between bg-azure rounded-full px-6 py-5 mb-5 items-center gap-2"
           data-modal-target="authentication-modal"
           data-modal-toggle="authentication-modal"
         >
